# InferScale

./: README.md
llm-inference-optimization-lab/: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
llm-inference-optimization-lab/app/: __init__.py
llm-inference-optimization-lab/app/baseline_service/: __init__.py  engine.py  main.py  model_loader.py
llm-inference-optimization-lab/app/benchmark/: __init__.py  analysis.py  client.py  plots.py  run_benchmarks.py  workloads.py
llm-inference-optimization-lab/app/common/: __init__.py  config.py  events.py  hashing.py  logging_utils.py  metrics.py  schemas.py  utils.py
llm-inference-optimization-lab/app/decode_service/: __init__.py  engine.py  handoff.py  main.py
llm-inference-optimization-lab/app/prefill_service/: __init__.py  cache_artifact.py  engine.py  main.py
llm-inference-optimization-lab/app/quantized_service/: __init__.py  adapters.py  calibration.py  engine.py  main.py
llm-inference-optimization-lab/app/router/: __init__.py  main.py  policy.py  service.py
llm-inference-optimization-lab/app/speculative_service/: __init__.py  draft_target.py  engine.py  main.py  verifier.py
llm-inference-optimization-lab/configs/: benchmark.yaml  logging.yaml  models.yaml
llm-inference-optimization-lab/docs/: architecture.md  benchmark_methodology.md  future_work.md  nvidia_mapping.md
llm-inference-optimization-lab/scripts/: generate_sample_logs.sh  run_all_benchmarks.sh  run_baseline.sh  run_disagg.sh  run_quantized.sh  run_router.sh  run_speculative.sh  setup.sh
llm-inference-optimization-lab/tests/: test_baseline.py  test_benchmark.py  test_disaggregated.py  test_events.py  test_quantized.py  test_router.py  test_speculative.py
(+17 files in other folders)
