[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-inference-optimization-lab"
version = "0.1.0"
description = "Systems-heavy LLM inference optimization testbed"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "torch>=2.2.0",
    "transformers>=4.38.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0.1",
    "prometheus-client>=0.20.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
